--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,4 @@
 NODE_ENV=development
 PORT = 5000
+
+MONG_URL = mongodb+srv://salim7442a:ABS25HK95@contact-manager-backend.elqevkj.mongodb.net/devcamper-api
