--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/Saliim242/Dev-Camper-API-#readme",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mongoose": "^8.8.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
